2009-09-10  Anthony Green  <green@moxielogic.com>

	* build.xml: Fix initramfs reference before building kernel.

2009-08-02  Anthony Green  <green@moxielogic.com>

	* dtc/*: New files.
	* build.xml: Clean and build dtc directory.

2009-07-28  Anthony Green  <green@moxielogic.com>

	* elf2flt, uClibc: New directories.
	* build.xml: Build elf2flt, uClibc and uClinux tools.

2009-07-27  Anthony Green  <green@moxielogic.com>

	* build.xml: Fix uClinux build task.

2009-07-26  Anthony Green  <green@moxielogic.com>

	* build.xml: Add linux-2.6 to clean target.

2009-07-23  Anthony Green  <green@moxielogic.com>

	* linux-2.6/*: New files.
	* build.xml: Build Linux kernel.

2009-07-13  Anthony Green  <green@moxielogic.com>

	* scripts/dejagnu/moxie-sim.exp: Tweak gdb test options (can
	reverse debug, for instance).

2009-06-26  Anthony Green  <green@moxielogic.com>

	* build.xml: Build GCC with g++.

2009-06-22  Anthony Green  <green@moxielogic.com>

        * moxie/rtl/verilog/MoxieCore.v: New file.
        * moxie/rtl/verilog/iprinter.v: New file.
        * moxie/rtl/verilog/moxie.v: New file.
        * moxie/rtl/verilog/moxiesoc.v: New file.
        * moxie/rtl/verilog/test.v: New file.
        * moxie/rtl/verilog/testsuite/config/default.exp: New file.
        * moxie/rtl/verilog/testsuite/moxie.modules/iprinter.exp: New file.
        * moxie/rtl/verilog/testsuite/moxie.modules/test-iprinter.v: New file.

2009-06-12  Anthony Green  <green@moxielogic.com>

	* README: Fit within 80 columns.
	* TODO, HACKING: Update.
	* scripts/moxie-elf-gcc.spec.in (with_newlib): Define.  Build a
	bootstrapping compiler by setting this to 0.  Also package
	python files with libstdc++.
	* build.xml: Read properties from
	${user.home}/moxiedev.properties.

2009-05-30  Anthony Green  <green@moxielogic.com>
	
	* HACKING: Added u-boot.  Corrections.
	* README: New file.

2009-05-26  Anthony Green  <green@moxielogic.com>

	* u-boot: Initial u-boot bits.