@@ -1,3 +1,8 @@
+2009-09-15  Anthony Green  <green@moxielogic.com>
+
+	* build.xml: Put dtc on path for sim build.
+	Fix busybox and initfs builds.
+
 2009-09-10  Anthony Green  <green@moxielogic.com>
 
 	* build.xml: Fix initramfs reference before building kernel.
